# ModernCppProject2025

./: .gitignore  CMakeLists.txt  README.md  ScreenCamera_2025-08-17-21-34-32.json  build.sh  implementation_plan.md  prerequisites.sh
include/: scopedTimer.hpp
include/visualizer/: visualizer.hpp
lib/bresenham/: bresenham.cpp  bresenham.hpp
lib/map/: map.cpp  map.hpp
src/: main.cpp
